tera/src/snapshot_tests/snapshots/tera__snapshot_tests__parser__parser_errors@duplicate_block_nested.txt.snap
---
source: tera/src/snapshot_tests/parser.rs
expression: res.unwrap_err()
input_file: tera/src/snapshot_tests/parser_inputs/errors/duplicate_block_nested.txt
---
 Syntax error --> [duplicate_block_nested.txt:1:26]
  |
1 | {% block hello %}{% block hello %}{% endblock %}{% endblock %}
  |                           ^---
  = Template already contains a block named `hello`
